<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="24dp"
    tools:context=".authentication.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_registration_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="15dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/color_cursor"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/color_cursor"/>

        <Spinner
            android:id="@+id/flags_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/textViewSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/already_registered"
            android:textAlignment="center" />

    </LinearLayout>

</RelativeLayout>