...
    <!-- BOTTOM NAVIGATION VIEW -->
    <string name="bottom_navigation_menu_word_list">List</string>
    <string name="bottom_navigation_menu_word_learn">Learn</string>
    <string name="bottom_navigation_menu_word_add">Add</string>

    <string name="edit_the_word">Edit word</string>
    <string name="login_failed">Login failed</string>
    <string name="login_please_wait">Login, please Wait…</string>
    <string name="please_enter_password">Please, enter password</string>
    <string name="please_enter_email">Please, enter email</string>
    <string name="update_word">update word</string>
    <string name="add_word">add word</string>
    <string name="sending_reset_email">Sending reset email, please Wait…</string>
...
    <string name="no_content_image_description">no Content Image</string>
    <string name="star_image_description">star image</string>
    <string name="loading_data">Loading data ...</string>
    <string name="portuguese">Portuguese</string>
    <string name="german">German</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="bulgarian">Bulgarian</string>
    <string name="select_language">Select your native language</string>
    <string name="logout">Log out</string>
    <string name="favorite">favorite</string>
    <string name="order_by">order by</string>
...
