...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/you_don_t_have_an_account"
            android:textAlignment="center" />

...
